--- a/force-app/main/default/layouts/UserDetail__c-UserDetail Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/UserDetail__c-UserDetail Layout.layout-meta.xml
@@ -27,6 +27,10 @@
                 <behavior>Edit</behavior>
                 <field>Message__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Welcome_Message__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
